--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cf:build": "npx @cloudflare/next-on-pages",
+    "cf:deploy": "npm run build && npm run cf:build && npx wrangler deploy"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18",
     "lucide-react": "^0.294.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "1.12.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -23,6 +26,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^3.80.0"
   }
 }
